[metadata]
name = idigest
version = 1.0
url = https://github.com/XiaoqZhang/i-digest

license = MIT
license_file = LICENSE

[options]
install_requires = 
    ipykernel==6.23.1
    ipython==8.12.2 
    numpy==1.24.3
    openai==0.27.7
    openai-whisper==20230314
    openapi-schema-pydantic==1.2.4
    pandas==2.0.2
    pygments==2.15.1
    pytube==15.0.0
    rdkit==2023.3.1
    streamlit==1.22.0
    tqdm==4.65.0
    loguru==0.7.0
    lxml==4.9.2
    pubchempy==1.0.4
    chemdataextractor==1.3.0
    langchain==0.0.186
    mols2grid==1.1.1


python_requires = >=3.8

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
